--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
    <div>
+       <img src="img/cloud.png" alt="cloud-img">
        <h1>I'm Fahim Ishtiaq</h1>
-       <p>an introvert</p>
+       <p>an 
+           <span class="intro">intro</span>vert</p>
+       <img src="img/cloud.png" alt="cloud-img">
+       <img src="img/mountain.png" alt="mountain-img">
    </div>
 </body>
-</html>
+</html>  
