--- a/index.html
+++ b/index.html
@@ -5,15 +5,56 @@
     <title>My Site</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="css/favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div>
-       <img src="img/cloud.png" alt="cloud-img">
-       <h1>I'm Fahim Ishtiaq</h1>
-       <p>an 
-           <span class="intro">intro</span>vert</p>
-       <img src="img/cloud.png" alt="cloud-img">
+   <div class="top-container">
+       <img class="top-cld" src="img/cloud.png" alt="cloud-img">
+        <h1>I'm Fahim Ishtiaq</h1>
+        <h2>an 
+           <span class="intro1">intro</span>vert
+        </h2>
+       <img class="btm-cld" src="img/cloud.png" alt="cloud-img">
        <img src="img/mountain.png" alt="mountain-img">
    </div>
+   <div class="middle-container">
+    <div class="profile">
+      <img class="img" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.t2IUEm2BVRtwur7Gm9HpJwHaHy%26pid%3DApi&f=1" alt="me">
+      <h2>Hello</h2>
+      <p class="intro2">An introvert man with no talent whatsoever.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="img skill-img1" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.AfRbTln8a7jRDks3v_pVoAHaHa%26pid%3DApi&f=1" alt="skill">
+        <h3>Still a newbie</h3>
+        <p>Trying to learn web development. Learning html, css, js.</p>
+      </div>
+    <br>
+      <div class="skill-row">
+        <img class="img skill-img2" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn3.iconfinder.com%2Fdata%2Ficons%2Fbusiness-round-set-1%2F128%2FBLOG_WRITING-512.png&f=1&nofb=1" alt="skill2">
+        <h3>Attached to PC</h3>
+        <p>Mostly spend time using laptop while I'm in the house.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Text if needed</h3>
+      <p class="contact-msg">Inactive on Facebook, but available on Telegram most of the time.</p>
+      <a class="btn" href="mailto:fishtiaq34@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+  
+  <div class="bottom-container">
+    <a class="footer-link link" href="https://www.linkedin.com/in/fahim-ishtiaq/">LinkedIn</a>
+    <a class="footer-link link" href="https://www.facebook.com/fishtiaq/">Facebook</a>
+    <a class="footer-link link" href="https://github.com/CarnivoreMan">GitHub</a>
+    <a class="footer-link link" href="https://t.me/Apocalyptic_Pandemonium">Telegram</a>
+    <p class="copyright">© 2021 Fahim Ishtiaq.</p>
+  </div>
+  
 </body>
 </html>  
